--- a/AMS/Protokoll/theorie.tex
+++ b/AMS/Protokoll/theorie.tex
@@ -29,11 +29,7 @@ Dabei werden Atome aus dieser gelöst und nehmen Elektronen auf.
 Durch eine angelegte Spannung von \SI{29}{\kilo\volt} werden die entstandenen negativen Ionen jetzt beschleunigt.
 Mithilfe eines elektrischen Feldes am ESA (elektrostatischer Deflektor) und eines magnetischen Feldes am \ang{90} Magneten werden dabei Ionen unerwünschter Masse (bzw. Ladung) herausgefiltert.
 An dieser Stelle wird z. B. das Isotop  $^{9}$Be aus dem Strahl entfernt.
-<<<<<<< HEAD
-Im Strahl verbleiben das Radioisotop $^{10}$Be und das stabile Isotop $^{10}$B.
-=======
-Im Strahl verbleiben das Radioisotop $^{10}$Be und das stabile Isotop $^{10}$Be
->>>>>>> 02d5732e9425aebfd159d4ffefdb31de7dd3d858
+Im Strahl verbleiben das Radioisotop $^{10}$Be und das stabile Isotop $^{10}$Be.
 Dieser negative Ionenstrahl, wird danach mit einer Spannung von bis zu \SI{6}{\mega\volt} in die Mitte des Tandem beschleunigt, in welchem sich ein Argon-Gas befindet.
 Durch Wechselwirkungen der Ionen mit dem Gas und durch die herrschenden Energien werden verbleibende Moleküle zerstört und Elektronen aus den Ionen geschlagen.
 Die jetzt positiven Ionen werden im Tandem weiter zur anderen Seite beschleunigt.
@@ -48,11 +44,7 @@ Der zweite Summand beschreibt die Beschleunigung nach dem Argongas.
 Im Strahlengang nach dem Beschleuniger steht ein weiterer \ang{90} Magnet, durch dessen magnetisches Feld die Isotope nach Impuls (und Ladung) getrennt werden.
 Isotope mit hoher Konzentration können jetzt mithilfe eines Faraday-Cup gemessen werden.
 
-<<<<<<< HEAD
 Für die Messung der Radioisotope ergibt sich jetzt das Problem, dass einzelne $^{10}$B Isotope im Strahl verbleiben, aufgrund der gleichen Masse und des gleichen Ladungszustands wie das interessante $^{10}$Be Nuklid, was die weitere Messung stören würde.
-=======
-Für die Messung der Radioisotope ergibt sich jetzt das Problem, dass einzelne $^{10}$B Isotope im Strahl verbleiben, aufgrund der gleichen Masse und des Ladungszustandes wie das interessante $^{10}$Be Nuklid, was die weitere Messung stören würde.
->>>>>>> 02d5732e9425aebfd159d4ffefdb31de7dd3d858
 Um diese Isobare rauszufiltern ist eine dünne Siliciumnitrid-Folie in den Weg des Strahls gelegt.
 Der Energieverlust von schweren geladenen Teilchen in dieser Folie berechnet sich mit:
 \begin{equation}
