--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -23,14 +23,9 @@ An dieser Stelle lässt sich jedoch nicht unterscheiden zwischen Molekularen iso
 Ebenfalls wichtig ist, dass hier keine leichten Moleküle oder Ionen mit einem anderen Ladungszustand als 1 vorkommen, theoretisch vorhandene schwere Moleküle könnten jedoch hier mit höheren Ladungszuständen auftauchen.
 Für $\rho$ war ein Wert von \SI{0.4}{\metre} gegeben.
 Damit ergeben sich für einfach negativ geladene Ionen folgende benötigte Magnetfeldstärken:
-<<<<<<< HEAD
 \begin{table}[H]
   \centering
   \caption{Benötigte Magnetfeldstärken im ersten Ablenkmagneten für Ionen vor dem Beschleuniger}
-=======
-\begin{center}
-  \captionof{table}{Benötigte Magnetfeldstärken im ersten Ablenkmagneten für Ionen vor dem Beschleuniger}
->>>>>>> 02d5732e9425aebfd159d4ffefdb31de7dd3d858
   \begin{tabular}{|c|c|}
     \hline
     Ion & Magnetfeldstärke / \si{\tesla} \\
@@ -60,12 +55,8 @@ Leider haben wir dies in dem Versuch nicht gemacht.
 
 In Abb. \ref{lowenergy} sind jetzt die Messungen dargestellt.
 Zur Identifikation betrachten wir als erstes die 153BeO Probe.
-<<<<<<< HEAD
-Die berechneten Massen sind in Tabelle \ref{153Be} zu sehen.
-=======
 Die aufgenommenen Intensitäten sind in Abb. \ref{Probe_Be} zu sehen.
 Die berechneten Massen in Tabelle \ref{153Be}.
->>>>>>> 02d5732e9425aebfd159d4ffefdb31de7dd3d858
 Die Höhe der Peaks wird für die folgende Analyse nicht betrachtet, da das Amperemeter des Faraday-Cup gerade an den Maxima häufig übersteuert hat und wir damit keinen zuverlässigen Messwert haben.
 \begin{table}[h]
     \centering
@@ -85,29 +76,21 @@ Die entsprechenden Massen sind hier gut zuordbar, was bei einer reinen Probe auc
 \begin{itemize}
     \item \SI{16}{\atomicmassunit} entsprechen der Masse von $^{16}$O$^{1-}$.
     \item \SI{25}{\atomicmassunit} entsprechen der Masse von $^{9}$Be$^{16}$O$^{1-}$.
-<<<<<<< HEAD
     \item \SI{28}{\atomicmassunit} entsprechen der Masse von $^{12}$C$^{16}$O$^{1-}$ oder auch $^{28}$Si$^{1-}$.
-=======
-    \item \SI{28}{\atomicmassunit} entspricht mit ziemlicher Sicherheit $^{12}$C$^{16}$O$^{1-}$.
-Diese sind auch einfach durch Verschmutzungen der Probe mit Luft zu erklären.
+\end{itemize}
+Letztere sind auch einfach durch Verschmutzungen der Probe mit Luft zu erklären.
 Theoretisch könnte hier auch $^{10}$Be$^{18}$O$^{1-}$ gemessen werden, beide Isotope sind jedoch bereits für sich alleine selten, ein Strom von diesen Molekülen ist dementsprechend unwahrscheinlich.
 Außerdem wäre in diesen Fall ein zusätzllicher Peak bei \SI{18}{\atomicmassunit} für $^{18}$O$^{-1}$ zu erwarten.
->>>>>>> 02d5732e9425aebfd159d4ffefdb31de7dd3d858
-\end{itemize}
 
-<<<<<<< HEAD
 Die Probe KY13 besitzt weitgehend dieselben Peaks.
 Neu hinzugekommen ist bei dieser einer bei \SI{42.29}{\ampere}, was einer Masse von \SI{12}{\atomicmassunit} entspricht.
 Eine Erklärung dieser Masse wären $^{12}$C$^{1-}$ Ionen, welche aus der Probe oder auch durch Lufteinschlüsse in der Probe zu finden sind.
-=======
 \begin{figure}[ht]
 	\centering
            \includegraphics[width=0.85\textwidth]{../Pictures/Be_low.png}
 	\caption{Gemessene Stromstärken der Strahlen (im Faraday-Cup) in Abhängigkeit der eingestellten Stromstärke am BI \ang{90} Bouncer-Magneten für die BeO-Probe}
 	\label{Probe_Be}
 \end{figure}
->>>>>>> 02d5732e9425aebfd159d4ffefdb31de7dd3d858
-
 
 In Tabelle \ref{KY_rest} sind die Peaks der Probe KY13 und die dazu passenden Ionen dargestellt.
 Bei den gemessenen Strömen ist zu beachten, dass wir aufgrund der Vollausschläge bei einigen Strömen keinen Messwert am Peak hatten.
