--- a/AMS/Protokoll/diskussion.tex
+++ b/AMS/Protokoll/diskussion.tex
@@ -1,4 +1,4 @@
-\section{Diksussion}
+\section{Diskussion}
 
 Alle Aufgabenteile konnten erfolgreich abgeschlossen werden.
 
@@ -28,12 +28,12 @@ Die Ergebnisse dafür sind in Tab. \ref{dis_con} zu sehen.
 \caption{Gemessene Werte zur Berechnung der $^{10}$Be Konzentration in den Proben.}
 \begin{tabular}{|c |c| c|}
 \hline
-Probe& $c_{sample}$ & mittlere Tiefe [cm] \\
+Probe& $\frac{\text{Atome}}{\si{\gram}}$ & mittlere Tiefe [cm] \\
 \hline
-KY13 &  $(1,668 \pm 0,076) \cdot 10^{-17}$ & 47,5\\
-KY14 &  $(1,438 \pm 0,066) \cdot 10^{-17}$ & 57,5 \\
-KY16 &  $(1,146 \pm 0,054) \cdot 10^{-17}$ & 92,5\\
-KY17 &  $(9,330 \pm 0,049) \cdot 10^{-17}$ & 112,5\\
+KY13 &  $(\num{1.115} \pm \num{0.050}) \cdot 10^{6} $ & 47,5\\
+KY14 &  $(\num{9.61} \pm \num{0.44}) \cdot 10^{5} $ & 57,5 \\
+KY16 &  $(\num{7.66} \pm \num{0.36}) \cdot 10^{5} $ & 92,5\\
+KY17 &  $(\num{6.23} \pm \num{0.33}) \cdot 10^{5} $ & 112,5\\
 \hline
 \end{tabular}
 \label{dis_con}
@@ -43,4 +43,4 @@ Dies haben wir so erklärt, dass $^{10}$Be durch Ereignisse mit kosmischer Strah
 Nach dieser Erklärung sollte eigentlich ein exponentieller Abfall stattfinden, was wir aber weder ausschließen noch bestätigen können.
 Weitere Proben zur Messung könnten diese Frage aber beantworten.
 Eine Verfälschung der Proben durch hochenergetische Strahlung aus anderen Quellen ist potentiell möglich, würde aber nichts am abnehmen der Konzentration ändern.
-Eine Neutronenquelle im inneren der Probe würde das Ergebnis entsprechend ändern können, ist aber unwahrshheinlich.
+Eine Neutronenquelle im inneren der Probe würde das Ergebnis entsprechend ändern können, ist aber unwahrscheinlich.
